objects/Service_Order__c.object
<CustomObject>
    <description>Badge Scenario #6</description>
    <fields>
        <fullName>Description_del__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Orders</relationshipLabel>
        <relationshipName>Service_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_ID__c</fullName>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Service Order ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Service Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>RW_Service_Engineer__c</fullName>
        <label>RW Service Engineer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Read_Only_Sales_Rep__c</fullName>
        <label>Read Only Sales Rep</label>
    </sharingReasons>
</CustomObject>